# Aster-Android

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  gradle.properties  settings.gradle.kts
.fdroid/: MR_DESCRIPTION.md  org.astermail.android.yml
.github/workflows/: build.yml  release_fdroid.yml  validate-fastlane-metadata.yml
.maestro/: .env.example  .gitignore  README.md  run_all.ps1
.maestro/flows/: 00_smoke_app_launches.yaml  config.yaml
.maestro/flows/auth/: 01_welcome_screen.yaml  02_sign_in_form_validation.yaml  03_sign_in_success.yaml  04_register_navigation.yaml  05_forgot_password.yaml  06_register_full_flow.yaml
.maestro/flows/compose/: 111_compose_send_disabled.yaml  112_compose_recipient_autocomplete.yaml  113_compose_to_chip_remove.yaml  114_compose_draft_autosave.yaml  80_compose_cc_bcc.yaml  81_compose_from_alias.yaml  82_compose_ghost_alias.yaml  83_compose_overflow.yaml  84_compose_schedule_send.yaml  85_compose_expiring.yaml  86_compose_templates.yaml  87_compose_discard_dialog.yaml  88_compose_attachment_remove.yaml  (+1 more)
.maestro/setup/: open_settings.yaml  sign_in.yaml
app/: build.gradle.kts  google-services.json.example  proguard-rules.pro
core-api/: build.gradle.kts
core-crypto/: build.gradle.kts
core-design/: build.gradle.kts
core-storage/: build.gradle.kts
docs/: fdroid_setup_for_maintainer.md
gradle/: libs.versions.toml
rust/aster-crypto-ffi/: Cargo.toml  README.md  rust-toolchain.toml
rust/aster-crypto-ffi/scripts/: build_android.sh
rust/aster-crypto-ffi/src/: c_api.rs  jni_api.rs  lib.rs
(+429 files in other folders)
