[workspace]

[package]
name = "aster-crypto-ffi"
version = "0.1.0"
edition = "2021"
description = "JNI bindings for Aster client crypto, compiled from source for the Android build"
license = "AGPL-3.0-or-later"
publish = false

[lib]
name = "aster_crypto_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
thiserror = "1.0"
aes-gcm = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hkdf = "0.12"
hmac = "0.12"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
sha2 = "0.10"
base64 = "0.22"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }

[profile.release]
strip = true
trim-paths = "all"
